# RustCode

./: .gitignore  Cargo.toml  DEPLOYMENT_COMPLETION.md  INSTALL.md  QUICKSTART.md  README.md  README.zh.md  docker-compose.yml  install.ps1  install.sh  package.json  run.bat
.github/workflows/: ci.yml  release.yml
gui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
gui/scripts/: tauri-dev.ps1
gui/src/: App.tsx  styles.css  types.ts
plan/: agent-core-master-plan.md  phase-01-runtime-foundation.md  phase-02-tool-runtime.md  phase-03-permissions-and-session.md  phase-04-slash-commands-and-compact.md  phase-05-tui-parity.md  phase-06-agent-extensions.md  phase-07-session-fork-replay.md  phase-08-tauri-desktop-migration.md  runtime-model-mapping.md
scripts/: install-linux.sh  install-windows.ps1
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/advanced/: project_init.rs  ssh.rs
src/agents_runtime/: context.rs  executor.rs  memory.rs  mod.rs  store.rs  types.rs
src/api/: mod.rs
src/cli/: args.rs  mod.rs  onboarding.rs  repl.rs
src/compact/: mod.rs  prompt.rs  service.rs
src/config/: api_config.rs  mod.rs  settings.rs
src/file_history/: mod.rs
src/gui/: app.rs  chat.rs  main.rs  mod.rs  onboarding.rs  settings.rs  sidebar.rs  theme.rs
src/i18n/: loader.rs  mod.rs  translator.rs
src/input/: mod.rs  pipeline.rs  slash.rs  types.rs
src/mcp/: sampling.rs  tools.rs
src/memory/: context.rs  history.rs  mod.rs  (+2 more)
(+52 files in other folders)
